Removed underlining on links in favour shadows and cursor:pointer Fixed centering of footer vanity area because of the hierarchy div Hid the header Up div on thin displays Lowered visibility of JS click divs

--- a/public_html/test/styles.css
+++ b/public_html/test/styles.css
@@ -46,7 +46,6 @@ a {
 }
 
 a:hover, a:active, .hov:hover {
-    text-decoration: underline;
 	text-shadow: 0px 0px 7px #0000F9;
 }
 
@@ -66,11 +65,17 @@ a:hover, a:active, .hov:hover {
 .hov {
     text-decoration: none;
 	transition: text-shadow 1s;
+	cursor: pointer;
 }
 
 .emph {
     font-weight: bold;
     color: #C55E4C;
+}
+
+.un-emph {
+	color: #A3A3A3;
+	font-size: 0.9em;
 }
 
 .contain {
@@ -209,8 +214,7 @@ li .nos-check:checked ~ ul {
 }
 
 #foot-hier {
-    float: left;
-    display: inline;
+    position: absolute;
     margin-left: 20px;
 }
 
@@ -286,6 +290,11 @@ li .nos-check:checked ~ ul {
 	}
 	
 	#head-hider {
+		opacity: 0;
+		display: none;
+	}
+	
+	#header .fright {
 		opacity: 0;
 		display: none;
 	}
